# crate-protoflight

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ListOfFlightControlSoftware.md  README.md  build.rs  justfile  memory.x  notes.md
.cargo/: config.toml
src/: dispatch.rs  main.rs
src/autopilot/: README.md  altitude_dual_ring_pid.rs  altitude_hold.rs  altitude_kalman_filter.rs  config.rs  mock_multirotor.rs  mod.rs  path_follower.rs  pilot.rs  xy_position_dual_ring_pid.rs
src/config/: README.md  global_config.rs  imu_config.rs  mod.rs  profiles.rs  system_config.rs
src/display/: README.md  display_port.rs  display_port_layers.rs  display_port_max7456.rs  display_port_mock.rs  display_port_msp.rs  mod.rs
src/drivers/: mod.rs  sd_card.rs
src/flight/: README.md  arming.rs  configuration.rs  features.rs  flight_control_message.rs  flight_controller.rs  flight_controller_config.rs  imu_filters.rs  mod.rs  position_controller.rs  rc_adjustments.rs  rx_message.rs  vehicle_control.rs  vehicle_controller.rs
src/gps/: README.md  config.rs  geodetic.rs  gps_data.rs  gps_sensor_data.rs  gps_solution_data.rs  mod.rs
src/multiwii_serial_protocol/: README.md  mod.rs  msp.rs  msp_commands.rs  msp_stream.rs
src/osd/: README.md  config.rs  display.rs  elements.rs  elements_draw.rs  mod.rs  symbols.rs
src/sensor_data/: README.md  data.rs  global_sensor_data.rs  mod.rs
src/sensors/: README.md  barometer.rs  battery.rs  config.rs  magnetometer.rs  messages.rs  mod.rs  optical_flow.rs  rangefinder.rs  sensor_flags.rs
src/tasks/: README.md  ai_prompting.md  autopilot_task.rs  barometer_task.rs  battery_task.rs  blackbox_task.rs  blackbox_writer_task.rs  dispatch.rs  flight_control_task.rs  global_debug.rs  gps_task.rs  gyro_pid_task.rs  imu_task.rs  init.rs  init_rp.rs  mod.rs  motor_mixer_task.rs  msp_task.rs  non_volatile_storage.rs  optical_flow_task.rs  osd_task.rs  radio_task.rs  rangefinder_task.rs  rx_task.rs  sd_writer_task.rs
src/vtx/: README.md  config.rs  mod.rs  video.rs
