[package]
name = "protoflight"
version = "0.1.1"
edition = "2024"
authors = ["Martin Budden"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-protoflight"
description = "Protoflight flight controller."
keywords = ["flight", "no-std"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
    "aerospace::drones",
]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.1"

[features]
autopilot = []
barometer = []
blackbox = []
dashboard = []
gps = []
multicore = []
msp = []
osd = []
rangefinder = []
rpm_filters = []
vtx = []

#default = ["std", "libm"]
default = ["std", "blackbox", "libm", "osd", "rpm_filters", "barometer", "gps", "msp", "autopilot", "rangefinder"]
#default = ["rp2350", "blackbox", "libm", "osd"]
libm = ["dep:libm", "vqm/libm", "signal-filters/libm", "pidsk-controller/libm", "radio-controllers/libm"]
std = ["embassy-time/std", "critical-section/std", "embassy-executor/platform-std", "imu-sensors/std" ,"vqm/std", "signal-filters/std"]
no_align = ["vqm/no_align", "signal-filters/no_align"]
simd = ["vqm/simd", "signal-filters/simd"]
#rp2350 = ["embassy-rp/rp235xa"]
rp2350 = []
serde = ["vqm/serde", "radio-controllers/serde", "motor-mixers/serde"]

#[dependencies.embassy-rp]
#optional = true
#version = "0.10.0" # Make sure you're on the latest
#features = ["time-driver", "critical-section-impl"]

[dependencies]
embassy-sync = "0.8.0"
embassy-futures = {version = "0.1.2" }
embassy-time = {version = "0.5.1", default-features = false}
embassy-executor = { version = "0.10.0", features = ["executor-thread"] }
#embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }#"task-arena-size-32768",
#embassy-rp = { version = "0.10.0", features = ["time-driver", "critical-section-impl"] }

derive_more = { version = "2.1.1", features = ["display"] }
num-traits = { version = "0.2.19", default-features = false }
stream-buf = "0.1.0"
vqm = { version = "0.1.10" }
#vqm = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
#vqm = { path = "../vqm" }
signal-filters = "0.1.7"
#signal-filters = { git = "https://github.com/martinbudden/crate-signal-filters" }
#signal-filters = { path = "../signal-filters" }
pidsk-controller = "0.1.5"
#pidsk-controller = { path = "../pidsk-controller" }
#sensor-fusion = "0.1.6"
#sensor-fusion = { git = "https://github.com/martinbudden/crate-sensor-fusion" }
sensor-fusion = { path = "../sensor-fusion" }
#motor-mixers = { version = "0.1.4", features = ["serde"] }
#motor-mixers = { git = "https://github.com/martinbudden/crate-motor-mixers", features = ["serde"] }
motor-mixers = { path = "../motor-mixers", features = ["serde"] }
#radio-controllers = { version = "0.1.5", features = ["serde"] }
#radio-controllers = { git = "https://github.com/martinbudden/crate-radio-controllers", features = ["serde"] }
radio-controllers = { path = "../radio-controllers", features = ["serde"] }
blackbox-logger = { version = "0.1.6", features = ["serde"] }
#blackbox-logger = { git = "https://github.com/martinbudden/crate-blackbox-logger", features = ["serde"] }
#blackbox-logger = { path = "../blackbox-logger", features = ["serde"]  }
imu-sensors = { version = "0.1.2", features = ["serde"] }
#imu-sensors = { git = "https://github.com/martinbudden/crate-imu-sensors", features = ["serde"] }
#imu-sensors = { path = "../imu-sensors", features = ["serde"] }

libm = { version = "0.2.16", optional = true }
paste = "1.0.15"

embedded-storage-async = "0.4.1"
# Add this crate to provide the actual in-memory simulator
embedded-storage-file = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["embedded-io"] }
sequential-storage = { version = "7.2.0", features = ["postcard"] }


critical-section = { version = "1.2.0", default-features = false}
rand = { version = "0.10.1" }
log = { version = "0.4.29" }
env_logger = { version ="0.11.10" }
static_cell = "2.1.1"


[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
