[package]
name = "protoflight"
version = "0.1.1"
edition = "2024"
authors = ["Martin Budden"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-protoflight"
description = "Protoflight flight controller."
keywords = ["flight", "no-std"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
    "aerospace::drones",
]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.1"

[features]
#default = ["std", "libm"]
#default = ["rp2350", "libm"]
default = ["std", "libm", 
    "autopilot",
    "barometer",
    "battery",
    "blackbox",
    "gps",
    #"magnetometer",
    "msp",
    #"optical_flow",
    "osd",
    #"rangefinder",
    "rpm_filters",
    "rtt-debug",
    "serde",
]
#default = ["rp2350", "libm", "blackbox", "max7456", "osd", "rpm_filters", "barometer", "gps", "msp", "autopilot", "rangefinder"]
#default = ["rp2350", "libm", "max7456", "osd"]
#default = ["std", "libm", "blackbox", "rpm_filters", "barometer", "msp", "autopilot"]
#default = ["rp2350", "blackbox", "libm", "osd"]

autopilot = []
barometer = []
battery = []
blackbox = []
cms = []
dashboard = []
gps = []
magnetometer = []
max7456 = []
multicore = []
msp = []
optical_flow = []
osd = []
osd_hd = []
rangefinder = []
rpm_filters = []
rtt-debug = ["dep:rtt-target"]
vtx = []

# Core backend features declared explicitly
libm = ["dep:libm", "num-traits/libm", "vqm/libm", "signal-filters/libm", "radio-controllers/libm"]
no_align = ["vqm/no_align", "signal-filters/no_align"]
simd = ["vqm/simd", "signal-filters/simd"]
serde = ["dep:serde", "blackbox-logger/serde", "imu-sensors/serde", "motor-mixers/serde", "radio-controllers/serde", "simple-bitset/serde", "vqm/serde" ]
#sequential-storage = ["dep:sequential-storage"]

# Target platforms
std = ["critical-section/std", "derive_more/std", "embassy-time/std", "embassy-executor/platform-std", "imu-sensors/std", "log/std", "num-traits/std", "signal-filters/std", "vqm/std"]
rp2350 = ["dep:embassy-rp", "embassy-rp/rp235xa"]


[dependencies]
# Core Embassy executor and concurrency primitives
embassy-executor = { version = "0.10.0", default-features = false, features = ["executor-thread"] }
#embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }#"task-arena-size-32768",
embassy-futures = { version = "0.1.2", default-features = false }
embassy-time = { version = "0.5.1", default-features = false }
embassy-sync = { version = "0.8.0", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
static_cell = "2.1.1"
# Hardware-specific Embassy HAL
critical-section = { version = "1.2.0", default-features = false }
embassy-rp = { version = "0.10.0", default-features = false, features = ["time-driver", "critical-section-impl"], optional = true }

strum = { version = "0.28.0", default-features = false, features = ["derive"] }
derive_more = { version = "2.1.1", default-features = false, features = ["display"] }
num-traits = { version = "0.2.19", default-features = false }
libm = { version = "0.2.16", optional = true }

serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["embedded-io"], optional = true }
sequential-storage = { version = "7.2.0", default-features = false, features = ["postcard"] }
embedded-storage-async = { version = "0.4.1", default-features = false }
# Add this crate to provide the actual in-memory simulator
embedded-storage-file = { version = "0.2.0", default-features = false }


simple-bitset = "0.1.1"
stream-buf = "0.1.0"
vqm = { version = "0.1.12" }
#vqm = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
#vqm = { path = "../vqm" }
signal-filters = "0.1.8"
#signal-filters = { git = "https://github.com/martinbudden/crate-signal-filters" }
#signal-filters = { path = "../signal-filters" }
pidsk-controller = "0.1.6"
#pidsk-controller = { path = "../pidsk-controller" }
sensor-fusion = "0.1.7"
#sensor-fusion = { git = "https://github.com/martinbudden/crate-sensor-fusion" }
#sensor-fusion = { path = "../sensor-fusion" }
#motor-mixers = { version = "0.1.4" }
motor-mixers = { git = "https://github.com/martinbudden/crate-motor-mixers" }
#motor-mixers = { path = "../motor-mixers" }
#radio-controllers = { version = "0.1.5", features = ["serde"] }
radio-controllers = { git = "https://github.com/martinbudden/crate-radio-controllers" }
#radio-controllers = { path = "../radio-controllers" }
#blackbox-logger = { version = "0.1.7" }
blackbox-logger = { git = "https://github.com/martinbudden/crate-blackbox-logger", features = ["mock_sd_card"] }
#blackbox-logger = { path = "../blackbox-logger", features = ["mock_sd_card"]  }
imu-sensors = { version = "0.1.2" }
#imu-sensors = { git = "https://github.com/martinbudden/crate-imu-sensors" }
#imu-sensors = { path = "../imu-sensors" }

paste = { version = "1.0.15", default-features = false }

tinyrand = { version = "0.5.0" }
log = { version = "0.4.32", default-features = false }
env_logger = { version ="0.11.10", default-features = false }
rtt-target = { version = "0.6.2", optional = true }


[dev-dependencies]
approx = { version = "0.5.1", default-features = false }


# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
