[package]
name = "protoflight"
version = "0.1.1"
edition = "2024"
resolver = "2" # <-- FORCE THIS TO STOP BUILD-DEPENDENCY BLEEDING
authors = ["Martin Budden"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-protoflight"
description = "Protoflight flight controller."
keywords = ["flight", "no-std"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
    "aerospace::drones",
]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.1"

[features]
#default = ["std", "libm"]
#default = ["rp2350", "libm"]
default = ["libm",
    "std", "blackbox",
    #"rp2350",
    "autopilot",
    "barometer",
    "battery",
    "dshot_telemetry",
    "gps",
    #"magnetometer",
    "mock_sd_card",
    "msp",
    #"optical_flow",
    "osd",
    #"rangefinder",
    "rpm_filters",
    "rtt-debug",
    "serde",
]
#default = ["rp2350", "libm", "blackbox", "max7456", "osd", "rpm_filters", "barometer", "gps", "msp", "autopilot", "rangefinder"]
#default = ["rp2350", "libm", "max7456", "osd"]
#default = ["std", "libm", "blackbox", "rpm_filters", "barometer", "msp", "autopilot"]
#default = ["rp2350", "blackbox", "libm", "osd"]

autopilot = []
barometer = ["blackbox-logger/barometer"]
battery = []
blackbox = []
cms = []
dashboard = []
dshot_telemetry = ["blackbox-logger/dshot_telemetry"]
eight_motors = ["blackbox-logger/eight_motors"]
gps = ["blackbox-logger/gps"]
magnetometer = ["blackbox-logger/magnetometer"]
max7456 = []
mock_sd_card = []
multicore = []
msp = []
optical_flow = []
osd = []
osd_hd = []
rangefinder = ["blackbox-logger/rangefinder"]
rpm_filters = []
servos = ["blackbox-logger/servos"]
vtx = []

# Core backend features declared explicitly
# libm feature activates the optional crate named "libm", etc
libm = ["dep:libm", "num-traits/libm", "vqm/libm", "signal-filters/libm", "radio-controllers/libm", "blackbox-logger/libm"]
serde = ["dep:serde", "blackbox-logger/serde", "imu-sensors/serde", "motor-mixers/serde", "radio-controllers/serde", "simple-bitset/serde", "vqm/serde" ]
rtt-debug = ["dep:rtt-target"]
# no_align feature activates no_align feature in vqm and signal-filters crates, etc
no_align = ["vqm/no_align", "signal-filters/no_align"]
simd = ["vqm/simd", "signal-filters/simd"]
#sequential-storage = ["dep:sequential-storage"]

# Target platforms
std = [
    "critical-section/std",
    "blackbox-logger/std",
    "derive_more/std",
    "embassy-time/std",
    "embassy-executor/platform-std",
    "imu-sensors/std",
    "num-traits/std",
    "signal-filters/std", 
    "vqm/std",
    "log/std",
    "dep:embedded-storage-file",
    # Activate the desktop logger tools ONLY on the standard library platform
    "dep:env_logger",
    "dep:env_filter"
]
rp2350 = [
    "dep:embassy-rp", 
    "embassy-rp/rp235xa", 
    "embassy-rp/rt",                        # <-- FIX 1: Resolves the missing PEND_IRQ_TOKEN import error
    "embassy-rp/executor-thread",       # <-- Let the HAL define the hardware executor
    "embassy-rp/executor-interrupt",     # <-- Add if you require high-priority interrupt task pools
    "embassy-executor/platform-cortex-m",   # <-- Explicitly satisfies the executor's platform check
    "dep:cortex-m-rt",
]

[dependencies]
# Core Embassy executor and concurrency primitives
embassy-executor = { version = "0.10.0", default-features = false }
#embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }#"task-arena-size-32768",
embassy-futures = { version = "0.1.2", default-features = false }
embassy-time = { version = "0.5.1", default-features = false }
embassy-sync = { version = "0.8.0", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
static_cell = "2.1.1"
critical-section = { version = "1.2.0" }
# Hardware-specific Embassy HAL
embassy-rp = { version = "0.10.0", default-features = false, features = ["time-driver", "critical-section-impl"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }

strum = { version = "0.28.0", default-features = false, features = ["derive"] }
derive_more = { version = "2.1.1", default-features = false, features = ["display"] }
num-traits = { version = "0.2.19", default-features = false }
libm = { version = "0.2.16", optional = true }

serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["embedded-io"], optional = true }
sequential-storage = { version = "7.2.0", default-features = false, features = ["postcard"] }
embedded-storage-async = { version = "0.4.1", default-features = false }
# In-memory storage simulator
embedded-storage-file = { version = "0.2.0", default-features = false, optional = true }


simple-bitset = "0.1.4"
#simple-bitset = { git = "https://github.com/martinbudden/crate-simple-bitset" }
stream-buf = "0.1.2"
#stream-buf = { git = "https://github.com/martinbudden/crate-stream-buf" }
vqm = { version = "0.1.13" }
#vqm = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
#vqm = { path = "../vqm" }
signal-filters = "0.1.9"
#signal-filters = { git = "https://github.com/martinbudden/crate-signal-filters" }
#signal-filters = { path = "../signal-filters" }
pidsk-controller = "0.1.7"
#pidsk-controller = { path = "../pidsk-controller" }
sensor-fusion = "0.1.8"
#sensor-fusion = { git = "https://github.com/martinbudden/crate-sensor-fusion" }
#sensor-fusion = { path = "../sensor-fusion" }
#blackbox-logger = { version = "0.1.8", default-features = false, optional = true }
blackbox-logger = { git = "https://github.com/martinbudden/crate-blackbox-logger", default-features = false, optional = true }
#blackbox-logger = { path = "../blackbox-logger", default-features = false, optional = true }

#motor-mixers = { version = "0.1.4" }
motor-mixers = { git = "https://github.com/martinbudden/crate-motor-mixers" }
#motor-mixers = { path = "../motor-mixers" }
#radio-controllers = { version = "0.1.5" }
radio-controllers = { git = "https://github.com/martinbudden/crate-radio-controllers" }
#radio-controllers = { path = "../radio-controllers" }
#imu-sensors = { version = "0.1.2" }
imu-sensors = { git = "https://github.com/martinbudden/crate-imu-sensors" }
#imu-sensors = { path = "../imu-sensors" }

paste = { version = "1.0.15", default-features = false }

tinyrand = { version = "0.5.0" }
log = { version = "0.4.33", default-features = false }
env_logger = { version ="0.11.10", default-features = false, optional = true}
env_filter = { version = "2.0.0", default-features = false, optional = true }
rtt-target = { version = "0.6.2", optional = true }


[dev-dependencies]
approx = { version = "0.5.1", default-features = false }


# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1    # Allows deeper optimizations across the entire binary
